Fix form to create movement

--- a/app/views/movements/new.html.erb
+++ b/app/views/movements/new.html.erb
@@ -38,7 +38,7 @@
   
   <div class="field width-100">
     <%= form.label :amoutn, hidden: true %>
-    <%= form.number_field :amount, placeholder: 'Amount', required: true %>
+    <%= form.number_field :amount, placeholder: 'Amount', required: true, step: :any %>
   </div>
   
   <div class="selections">
