Add style and fix render issues

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/nav" %>
 <div class="mobile-container">
-  <div class="fill">
+  <div>
   <% @categories.includes([:movements]).each do |category| %>
     <div class="category-container">
       <% @total = 0 %>
