--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -7,16 +7,18 @@
   <%= form_with model: @category do |form|%>
     <div class="field width-100">
       <%= form.label :name, hidden: true %>
-      <%= form.text_field :name, placeholder: 'Category name'%>
+      <%= form.text_field :name, placeholder: 'Category name', required: true%>
     </div>
 
     <div class="field width-100">
       <%= form.label :icon, hidden: true %>
-      <%= form.text_field :icon, placeholder: 'Link to icon'%>
+      <%= form.text_field :icon, placeholder: 'Link to icon', required: true%>
     </div>
 
-    <div class="actions">
-    <%= form.submit%>
-    </div>
+    <footer>
+      <div class="actions">
+        <%= form.submit%>
+      </div>
+    </footer>
   <%end%>
 </div>
