--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,10 +27,13 @@
     <%= f.password_field :password_confirmation, placeholder: 'Re-write password', autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <%= render "devise/shared/links" %>
+
+  <footer>
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  </footer>
 <% end %>
 
-<%= render "devise/shared/links" %>
 </div>
