--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -3,6 +3,8 @@
   <div class="logo-container form-image">
     <img src="../../assets/logo.png">
   </div>
-  <%= link_to 'Log In', user_session_path, class: 'splash-btn' %> 
-  <%= link_to 'Sign Up', new_user_registration_path, class: 'splash-btn' %>
+  <div class="splash-links">
+    <%= link_to 'Log In', user_session_path, class: 'splash-btn' %> 
+    <%= link_to 'Sign Up', new_user_registration_path, class: 'splash-btn' %>
+  </div>
 </div>
