--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/nav" %>
 <div class="container">
   <div class="logo-container form-image">
-    <img src="../../assets/logo.png">
+    <img src="../../assets/images/logo.png">
   </div>
   <div class="splash-links">
     <%= link_to 'Log In', user_session_path, class: 'splash-btn' %> 
